# htmlweaver

./: .gitignore  LICENSE  README.md  pyproject.toml  test_page.html
htmlweaver/: __init__.py  cli.py  combiner.py  splitter.py  utils.py
htmlweaver/exporters/: __init__.py  react_exporter.py  vue_exporter.py
