[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "htmlweaver"
version = "1.0.0"
description = "Split HTML into threads. Weave them back together."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
  {name = "abutlb"}
]
keywords = ["html", "css", "javascript", "split", "combine", "cli", "webdev"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Environment :: Console",
  "Topic :: Software Development :: Build Tools",
]
dependencies = [
  "beautifulsoup4>=4.12.0",
]

[project.urls]
Homepage = "https://github.com/abutlb/htmlweaver"
Repository = "https://github.com/abutlb/htmlweaver"

[project.scripts]
htmlweaver = "htmlweaver.cli:main"
