[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "htmlweaver"
version = "1.0.0"
description = "Split HTML into threads. Weave them back together."
readme = "README.md"
license = "MIT"
authors = [
    { name = "abutlb", email = "your@email.com" }
]
requires-python = ">=3.8"
dependencies = [
    "beautifulsoup4>=4.12.0",
    "click>=8.0.0",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.scripts]
htmlweaver = "htmlweaver.cli:main"

[tool.setuptools.packages.find]
include = ["htmlweaver*"]
exclude = ["output*", "tests*", "dist*"]
